--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -328,6 +328,7 @@ document.addEventListener("DOMContentLoaded", function () {
                     document.getElementById("editUsername").value = data.userName ?? "";
                     document.getElementById("editEmail").value = data.userEmail ?? "";
                     document.getElementById("editContact").value = data.userContact ?? "";
+                    document.getElementById("editCardId").value = data.userCardId ?? "";
 
                     // Set dropdowns
                     document.getElementById("editStatus").value = data.userStatus ?? "";
