--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -82,8 +82,8 @@
                 <label>Staff ID</label>
                 <input type="text" name="userid" value="{{ id_text }}" required><br>
 
-                <label>Staff Card Id</label>
-                <input type="text" id="cardId" value="{{ cardId_text }}" required><br>
+                <label>Staff Card Id (Optional)</label>
+                <input type="text" id="cardId" value="{{ cardId_text }}"><br>
 
                 <label>Staff Name</label>
                 <input type="text" name="username" value="{{ name_text }}" required>
@@ -154,8 +154,8 @@
                     {% endfor %}
                 </select><br>
 
-                <label>Staff Card Id</label>
-                <input type="text" id="editCardId" name="editCardId" required><br>
+                <label>Staff Card Id (Optional)</label>
+                <input type="text" id="editCardId" name="editCardId"><br>
 
                 <label>Staff Name</label>
                 <input type="text" id="editUsername" name="editUsername" required>
