--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -51,9 +51,10 @@
                     </h4><br>
                     <div class="upload-text">
                         Please upload a file with the <b>first row left empty</b>.  
-                        Data should begin from columns <b>A to G</b>, with headers as follows:<br><br>
-                        <i>['ID', 'Name', 'Department', 'Role', 'Email', 'Contact', 'Gender']</i><br><br>
+                        Data should begin from columns <b>A to H</b>, with headers as follows:<br><br>
+                        <i>['ID', 'CardId', 'Name', 'Department', 'Role', 'Email', 'Contact', 'Gender']</i><br><br>
                         Ensure the data follows this format:<br>
+                        • <b>Card Id</b> is an <b>optional</b><br>
                         • <b>Email</b> must end with <b>@newinti.edu.my</b><br>
                         • <b>Contact</b> must start with <b>01</b> and contain 10–11 digits<br><br>
                         Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
