--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -170,7 +170,7 @@
 {% if open %}
 <form action="{{ url_for('user_homepage') }}" method="POST">
     <div style="padding: 10px;">
-        <h2>Open Public Own Selection Invigilation Slot</h2>
+        <h2>Open Public Own Select Invigilation Slot</h2>
         <div class="user-table-container">
             <table class="user-data-table">
                 <thead>
